@@ -522,7 +522,7 @@ name|i
 argument_list|)
 operator|)
 operator|.
-name|doDelete
+name|deleteDocument
 argument_list|(
 name|n
 argument_list|)
@@ -572,7 +572,7 @@ name|i
 argument_list|)
 operator|)
 operator|.
-name|doUndeleteAll
+name|undeleteAll
 argument_list|()
 expr_stmt|;
 block|}
@@ -807,7 +807,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -819,6 +821,15 @@ argument_list|(
 name|field
 argument_list|)
 operator|)
+decl_stmt|;
+return|return
+name|reader
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|reader
 operator|.
 name|getTermFreqVector
 argument_list|(
@@ -839,7 +850,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -851,6 +864,15 @@ argument_list|(
 name|field
 argument_list|)
 operator|)
+decl_stmt|;
+return|return
+name|reader
+operator|==
+literal|null
+condition|?
+literal|false
+else|:
+name|reader
 operator|.
 name|hasNorms
 argument_list|(
@@ -870,7 +892,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -882,6 +906,15 @@ argument_list|(
 name|field
 argument_list|)
 operator|)
+decl_stmt|;
+return|return
+name|reader
+operator|==
+literal|null
+condition|?
+literal|null
+else|:
+name|reader
 operator|.
 name|norms
 argument_list|(
@@ -907,6 +940,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -918,6 +954,14 @@ argument_list|(
 name|field
 argument_list|)
 operator|)
+decl_stmt|;
+if|if
+condition|(
+name|reader
+operator|!=
+literal|null
+condition|)
+name|reader
 operator|.
 name|norms
 argument_list|(
@@ -946,6 +990,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -957,6 +1004,14 @@ argument_list|(
 name|field
 argument_list|)
 operator|)
+decl_stmt|;
+if|if
+condition|(
+name|reader
+operator|!=
+literal|null
+condition|)
+name|reader
 operator|.
 name|doSetNorm
 argument_list|(
@@ -1012,7 +1067,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -1027,6 +1084,15 @@ name|field
 argument_list|()
 argument_list|)
 operator|)
+decl_stmt|;
+return|return
+name|reader
+operator|==
+literal|null
+condition|?
+literal|0
+else|:
+name|reader
 operator|.
 name|docFreq
 argument_list|(
@@ -1331,8 +1397,9 @@ operator|.
 name|field
 argument_list|()
 expr_stmt|;
-name|termEnum
-operator|=
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -1344,6 +1411,16 @@ argument_list|(
 name|field
 argument_list|)
 operator|)
+decl_stmt|;
+if|if
+condition|(
+name|reader
+operator|!=
+literal|null
+condition|)
+name|termEnum
+operator|=
+name|reader
 operator|.
 name|terms
 argument_list|(
@@ -1361,7 +1438,7 @@ name|IOException
 block|{
 if|if
 condition|(
-name|field
+name|termEnum
 operator|==
 literal|null
 condition|)
@@ -1456,6 +1533,15 @@ name|Term
 name|term
 parameter_list|()
 block|{
+if|if
+condition|(
+name|termEnum
+operator|==
+literal|null
+condition|)
+return|return
+literal|null
+return|;
 return|return
 name|termEnum
 operator|.
@@ -1469,6 +1555,15 @@ name|int
 name|docFreq
 parameter_list|()
 block|{
+if|if
+condition|(
+name|termEnum
+operator|==
+literal|null
+condition|)
+return|return
+literal|0
+return|;
 return|return
 name|termEnum
 operator|.
@@ -1484,6 +1579,12 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|termEnum
+operator|!=
+literal|null
+condition|)
 name|termEnum
 operator|.
 name|close
@@ -1562,8 +1663,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|termDocs
-operator|=
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -1578,11 +1680,21 @@ name|field
 argument_list|()
 argument_list|)
 operator|)
+decl_stmt|;
+name|termDocs
+operator|=
+name|reader
+operator|!=
+literal|null
+condition|?
+name|reader
 operator|.
 name|termDocs
 argument_list|(
 name|term
 argument_list|)
+else|:
+literal|null
 expr_stmt|;
 block|}
 DECL|method|seek
@@ -1613,6 +1725,15 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|termDocs
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
 return|return
 name|termDocs
 operator|.
@@ -1638,6 +1759,15 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|termDocs
+operator|==
+literal|null
+condition|)
+return|return
+literal|0
+return|;
 return|return
 name|termDocs
 operator|.
@@ -1660,6 +1790,15 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|termDocs
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
 return|return
 name|termDocs
 operator|.
@@ -1677,6 +1816,12 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+if|if
+condition|(
+name|termDocs
+operator|!=
+literal|null
+condition|)
 name|termDocs
 operator|.
 name|close
@@ -1725,8 +1870,9 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|termDocs
-operator|=
+name|IndexReader
+name|reader
+init|=
 operator|(
 operator|(
 name|IndexReader
@@ -1741,11 +1887,21 @@ name|field
 argument_list|()
 argument_list|)
 operator|)
+decl_stmt|;
+name|termDocs
+operator|=
+name|reader
+operator|!=
+literal|null
+condition|?
+name|reader
 operator|.
 name|termPositions
 argument_list|(
 name|term
 argument_list|)
+else|:
+literal|null
 expr_stmt|;
 block|}
 DECL|method|nextPosition
@@ -1756,6 +1912,7 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+comment|// It is an error to call this if there is no next position, e.g. if termDocs==null
 return|return
 operator|(
 operator|(
